--- a/partials/api/apDataService.processDeletionsSinceToken.html
+++ b/partials/api/apDataService.processDeletionsSinceToken.html
@@ -8,8 +8,8 @@
 to remove the deleted items from the local cache.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">processDeletionsSinceToken(responseXML, entityArray);</pre>
+<div class="usage"><pre class="prettyprint linenums">processDeletionsSinceToken(responseXML, indexedCache);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>responseXML</td><td><a href="" class="label type-hint type-hint-xml">xml</a></td><td><div class="apdataservice-processdeletionssincetoken-page"><p>XML response from the server.</p>
-</div></td></tr><tr><td>entityArray</td><td><a href="" class="label type-hint type-hint-array">Array</a></td><td><div class="apdataservice-processdeletionssincetoken-page"><p>Cached array of list items for a query.</p>
+</div></td></tr><tr><td>indexedCache</td><td><a href="" class="label type-hint type-hint-array">Array</a></td><td><div class="apdataservice-processdeletionssincetoken-page"><p>Cached array of list items for a query.</p>
 </div></td></tr></tbody></table></div>
 </div>
