--- a/partials/api/angularPoint.IndexedCache.html
+++ b/partials/api/angularPoint.IndexedCache.html
@@ -37,6 +37,12 @@ apIndexedCacheFactory.</p>
 </div><h5 id="methods_last_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-indexedcache-page angularpoint-indexedcache-last-page"><p>Last entity in cache.</p>
 </div></td></tr></table></div>
 </li>
+<li><h3 id="methods_nthentity">nthEntity(index)</h3>
+<div class="nthentity"><div class="angularpoint-indexedcache-page angularpoint-indexedcache-nthentity-page"><p>Based on the</p>
+</div><h5 id="methods_nthentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>index</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-indexedcache-page angularpoint-indexedcache-nthentity-page"><p>The index of the item requested.</p>
+</div></td></tr></tbody></table><h5 id="methods_nthentity_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-indexedcache-page angularpoint-indexedcache-nthentity-page"><p>First entity in cache.</p>
+</div></td></tr></table></div>
+</li>
 <li><h3 id="methods_removeentity">removeEntity(entity)</h3>
 <div class="removeentity"><div class="angularpoint-indexedcache-page angularpoint-indexedcache-removeentity-page"><p>Removes an entity from the cache.</p>
 </div><h5 id="methods_removeentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entity</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-indexedcache-page angularpoint-indexedcache-removeentity-page"><p>Entity to remove.</p>
