--- a/partials/api/angularPoint.apCacheService.html
+++ b/partials/api/angularPoint.apCacheService.html
@@ -8,7 +8,14 @@
 resolve once a requested list item is registered in the future.</p>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_getentity">getEntity(entityType, entityId)</h3>
+<ul class="methods"><li><h3 id="methods_getcachedentity">getCachedEntity(entityType, entityId)</h3>
+<div class="getcachedentity"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>Synchronise call to return a cached entity;</p>
+</div><h5 id="methods_getcachedentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>GUID for list the list item belongs to.</p>
+</div></td></tr><tr><td>entityId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>The entity.id.</p>
+</div></td></tr></tbody></table><h5 id="methods_getcachedentity_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>entity || undefined</p>
+</div></td></tr></table></div>
+</li>
+<li><h3 id="methods_getentity">getEntity(entityType, entityId)</h3>
 <div class="getentity"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentity-page"><p>Returns a deferred object that resolves with the requested entity immediately if already present or at some
 point in the future assuming the entity is eventually registered.</p>
 </div><h5 id="methods_getentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentity-page"><p>GUID for list the list item belongs to.</p>
@@ -16,11 +23,30 @@ point in the future assuming the entity is eventually registered.</p>
 </div></td></tr></tbody></table><h5 id="methods_getentity_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-promise">promise</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentity-page"><p>entity</p>
 </div></td></tr></table></div>
 </li>
-<li><h3 id="methods_registerentity">registerEntity(entity)</h3>
+<li><h3 id="methods_getentitytypebyname">getEntityTypeByName(name)</h3>
+<div class="getentitytypebyname"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>Allows us to lookup an entity cache using the name of the list instead of the GUID.</p>
+</div><h5 id="methods_getentitytypebyname_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>name</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>The name of the list.</p>
+</div></td></tr></tbody></table><h5 id="methods_getentitytypebyname_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>GUID for the list.</p>
+</div></td></tr></table></div>
+</li>
+<li><h3 id="methods_getentitytypebyname">getEntityTypeByName(keyString)</h3>
+<div class="getentitytypebyname"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>Allows us to use either the List Name or the list GUID and returns the lowercase GUID</p>
+</div><h5 id="methods_getentitytypebyname_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>keyString</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>List GUID or name.</p>
+</div></td></tr></tbody></table><h5 id="methods_getentitytypebyname_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getentitytypebyname-page"><p>Lowercase list GUID.</p>
+</div></td></tr></table></div>
+</li>
+<li><h3 id="methods_registerentity">registerEntity(entity, [targetCache])</h3>
 <div class="registerentity"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-registerentity-page"><p>Registers an entity in the cache and fulfills any pending deferred requests for the entity. If the
 entity already exists in the cache, we extend the existing object with the updated entity and return a
 reference to this updated object so the there is only a single instance of this entity withing the cache.</p>
 </div><h5 id="methods_registerentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entity</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-registerentity-page"><p>Pass in a newly created entity to add to the cache.</p>
+</div></td></tr><tr><td>[targetCache]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-registerentity-page"><p>Optionally pass in a secondary cache to add a reference to this entity.</p>
+</div></td></tr></tbody></table></div>
+</li>
+<li><h3 id="methods_registermodel">registerModel(model)</h3>
+<div class="registermodel"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-registermodel-page"><p>Creates a new ModelCache for the provide model where all list items will be stored with the key equaling
+the entity id&#39;s and value being a EntityContainer.  The entity is stored at EntityContainer.entity.</p>
+</div><h5 id="methods_registermodel_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>model</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-registermodel-page"><p>Model to create the cache for.</p>
 </div></td></tr></tbody></table></div>
 </li>
 <li><h3 id="methods_removeentity">removeEntity(entityType, entityId)</h3>
