--- a/partials/api/Model.extendListDefinition.html
+++ b/partials/api/Model.extendListDefinition.html
@@ -4,7 +4,8 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="model-extendlistdefinition-page"><p>Extends the List and Fields with list information returned from the server.</p>
+<div class="description"><div class="model-extendlistdefinition-page"><p>Extends the List and Fields with list information returned from the server.  Only runs once and after that
+returns the existing promise.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">extendListDefinition([options]);</pre>
