--- a/partials/api/apDataService.getList.html
+++ b/partials/api/apDataService.getList.html
@@ -4,7 +4,7 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="apdataservice-getlist-page"><p>Returns all list details including field and lsit config.</p>
+<div class="description"><div class="apdataservice-getlist-page"><p>Returns all list details including field and list config.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">getList(options);</pre>
