--- a/partials/api/angularPoint.apCacheService.html
+++ b/partials/api/angularPoint.apCacheService.html
@@ -8,7 +8,13 @@
 resolve once a requested list item is registered in the future.</p>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_getcachedentity">getCachedEntity(entityType, entityId)</h3>
+<ul class="methods"><li><h3 id="methods_getcachedentities">getCachedEntities(entityType)</h3>
+<div class="getcachedentities"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentities-page"><p>Returns all entities for a given model as an indexed cache with keys being the entity id&#39;s.</p>
+</div><h5 id="methods_getcachedentities_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentities-page"><p>GUID for list the list item belongs to.</p>
+</div></td></tr></tbody></table><h5 id="methods_getcachedentities_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentities-page"><p>Indexed cache containing all entities for a model.</p>
+</div></td></tr></table></div>
+</li>
+<li><h3 id="methods_getcachedentity">getCachedEntity(entityType, entityId)</h3>
 <div class="getcachedentity"><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>Synchronise call to return a cached entity;</p>
 </div><h5 id="methods_getcachedentity_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>GUID for list the list item belongs to.</p>
 </div></td></tr><tr><td>entityId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-apcacheservice-page angularpoint-apcacheservice-getcachedentity-page"><p>The entity.id.</p>
