--- a/docs/partials/api/ListItem.getLookupReference.html
+++ b/docs/partials/api/ListItem.getLookupReference.html
@@ -11,7 +11,7 @@
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>fieldName</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="listitem-getlookupreference-page"><p>Name of the lookup property on the list item that references an entity.</p>
 </div></td></tr><tr><td>lookupId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="listitem-getlookupreference-page"><p>The listItem.lookupId of the lookup object.  This allows us to also use this logic
 on a multi-select by iterating over each of the lookups.</p>
-</div> <p><em>(default: listItem.fieldName.lookupId)</em></p></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-promise">promise</a></td><td><div class="listitem-getlookupreference-page"><p>Resolves with the entity the lookup is referencing.</p>
+</div> <p><em>(default: listItem.fieldName.lookupId)</em></p></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="listitem-getlookupreference-page"><p>The entity the lookup is referencing or undefined if not in the cache.</p>
 </div></td></tr></table></div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="listitem-getlookupreference-page"><pre class="prettyprint linenums">
@@ -24,27 +24,7 @@ var project = {
 };
 
 //To get the location entity
-project.getLookupReference('location')
-    .then(function(entity) {
-       //Do something with the location entity
-
-    });
-</pre>
-<pre class="prettyprint linenums">
-var project = {
-   title: 'Project 1',
-   location: [
-       { lookupId: 5, lookupValue: 'Some Building' },
-       { lookupId: 6, lookupValue: 'Some Other Building' },
-   ]
-};
-
-//To get the location entity
-project.getLookupReference('location', project.location[0].lookupId)
-    .then(function(entity) {
-       //Do something with the location entity
-
-    });
+var entity = project.getLookupReference('location');
 </pre>
 </div></div>
 </div>
