--- a/partials/api/Model.getListItemById.html
+++ b/partials/api/Model.getListItemById.html
@@ -11,8 +11,7 @@ Attempts to retrieve the requested list item from the server.</p>
 <div class="usage"><pre class="prettyprint linenums">getListItemById(entityId, options);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="model-getlistitembyid-page"><p>Id of the item being requested.</p>
 </div></td></tr><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-getlistitembyid-page"><p>Used to override apDataService defaults.</p>
-</div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-getlistitembyid-page"><p>Promise that resolves with the requested list item if found.  Otherwise it returns null.
-When working offline it returns a mock entity and replaces the mock id with the id provided.</p>
+</div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-getlistitembyid-page"><p>Promise that resolves with the requested list item if found.  Otherwise it returns undefined.</p>
 </div></td></tr></table></div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="model-getlistitembyid-page"><pre class="prettyprint linenums">
