--- a/partials/api/angularPoint.apQueueService.html
+++ b/partials/api/angularPoint.apQueueService.html
@@ -9,12 +9,12 @@ Typical use is to display a loading animation of some sort</p>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_decrease">decrease()</h3>
-<div class="decrease"><div class="angularpoint-apqueueservice-page angularpoint-apqueueservice-decrease-page"><p>Decrease the counter by 1.</p>
+<div class="decrease"><div class="angularpoint-apqueueservice-page angularpoint-apqueueservice-decrease-page"><p>Decrease the apQueueService.count by 1.</p>
 </div><h5 id="methods_decrease_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-apqueueservice-page angularpoint-apqueueservice-decrease-page"><p>Current count after decrementing.</p>
 </div></td></tr></table></div>
 </li>
 <li><h3 id="methods_increase">increase()</h3>
-<div class="increase"><div class="angularpoint-apqueueservice-page angularpoint-apqueueservice-increase-page"><p>Increase the counter by 1.</p>
+<div class="increase"><div class="angularpoint-apqueueservice-page angularpoint-apqueueservice-increase-page"><p>Increase the apQueueService.count by 1.</p>
 </div></div>
 </li>
 <li><h3 id="methods_registerobservercallback">registerObserverCallback(callback)</h3>
@@ -23,7 +23,7 @@ Typical use is to display a loading animation of some sort</p>
 </div></td></tr></tbody></table></div>
 </li>
 <li><h3 id="methods_reset">reset()</h3>
-<div class="reset"><div class="angularpoint-apqueueservice-page angularpoint-apqueueservice-reset-page"><p>Reset counter to 0.</p>
+<div class="reset"><div class="angularpoint-apqueueservice-page angularpoint-apqueueservice-reset-page"><p>Reset apQueueService.count to 0.</p>
 </div><h5 id="methods_reset_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="angularpoint-apqueueservice-page angularpoint-apqueueservice-reset-page"><p>Current count after incrementing.</p>
 </div></td></tr></table></div>
 </li>
