--- a/partials/api/angularPoint.apQueryFactory.html
+++ b/partials/api/angularPoint.apQueryFactory.html
@@ -7,9 +7,7 @@
 <div class="description"><div class="angularpoint-apqueryfactory-page"><p>Exposes the Query prototype and a constructor to instantiate a new Query.</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
-<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apModalService">apModalService</a></code>
-</li>
-<li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
 </li>
 <li><code ng:non-bindable=""><a href="#/api/angularPoint.apDataService">apDataService</a></code>
 </li>
