--- a/partials/api/angularPoint.apUtilityService.html
+++ b/partials/api/angularPoint.apUtilityService.html
@@ -11,17 +11,17 @@
 </li>
 </ul>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_batchprocess">batchProcess(items, process, context, delay, maxItems)</h3>
+<ul class="methods"><li><h3 id="methods_batchprocess">batchProcess(entities, process, context, delay, maxItems)</h3>
 <div class="batchprocess"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>We REALLY don&#39;t want to lock the user&#39;s browser (blocking the UI thread) while iterating over an array of
-items and performing some process on them.  This function cuts the process into as many 50ms chunks as are
+entities and performing some process on them.  This function cuts the process into as many 50ms chunks as are
 necessary. Based on example found in the following article:
 <a href="http://www.nczonline.net/blog/2009/08/11/timed-array-processing-in-javascript/">Timed array processing in JavaScript</a>;</p>
-</div><h5 id="methods_batchprocess_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>items</td><td><a href="" class="label type-hint type-hint-object">Object[]</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>The entities that need to be processed.</p>
+</div><h5 id="methods_batchprocess_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entities</td><td><a href="" class="label type-hint type-hint-object">Object[]</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>The entities that need to be processed.</p>
 </div></td></tr><tr><td>process</td><td><a href="" class="label type-hint type-hint-function">Function</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>Reference to the process to be executed for each of the entities.</p>
 </div></td></tr><tr><td>context</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>this</p>
 </div></td></tr><tr><td>delay</td><td><a href="" class="label type-hint type-hint-number">Number</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>Number of milliseconds to delay between batches.</p>
-</div> <p><em>(default: 25)</em></p></td></tr><tr><td>maxItems</td><td><a href="" class="label type-hint type-hint-number">Number</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>Maximum number of items to process before pausing.</p>
-</div> <p><em>(default: items.length)</em></p></td></tr></tbody></table><h5 id="methods_batchprocess_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>Promise</p>
+</div> <p><em>(default: 25)</em></p></td></tr><tr><td>maxItems</td><td><a href="" class="label type-hint type-hint-number">Number</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>Maximum number of entities to process before pausing.</p>
+</div> <p><em>(default: entities.length)</em></p></td></tr></tbody></table><h5 id="methods_batchprocess_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>Promise</p>
 </div></td></tr></table><h4 id="methods_batchprocess_example">Example</h4>
 <div class="example"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><pre class="prettyprint linenums">
 function buildProjectSummary = function() {
