--- a/partials/api/apDataService.getListItemById.html
+++ b/partials/api/apDataService.getListItemById.html
@@ -7,8 +7,9 @@
 <div class="description"><div class="apdataservice-getlistitembyid-page"><p>Returns a single list item with the provided id.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">getListItemById(entityId, options);</pre>
+<div class="usage"><pre class="prettyprint linenums">getListItemById(entityId, model, options);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entityId</td><td><a href="" class="label type-hint type-hint-number">number</a></td><td><div class="apdataservice-getlistitembyid-page"><p>Id of the item being requested.</p>
+</div></td></tr><tr><td>model</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-getlistitembyid-page"><p>Model this entity belongs to.</p>
 </div></td></tr><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-getlistitembyid-page"><p>Configuration parameters.</p>
 </div></td></tr><tr><td>options.listName</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="apdataservice-getlistitembyid-page"><p>GUID of the list.</p>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-getlistitembyid-page"><p>Promise which resolves with the requested entity if found.</p>
