--- a/partials/api/angularPoint.apUserModel.html
+++ b/partials/api/angularPoint.apUserModel.html
@@ -20,18 +20,18 @@
 </div></td></tr></tbody></table><h5 id="methods_checkifmember_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-apusermodel-page angularpoint-apusermodel-checkifmember-page"><p>Is the user a member of the group?</p>
 </div></td></tr></table></div>
 </li>
+<li><h3 id="methods_getgroupcollection">getGroupCollection(force)</h3>
+<div class="getgroupcollection"><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getgroupcollection-page"><p>Returns the group names for the current user and caches results.</p>
+</div><h5 id="methods_getgroupcollection_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>force</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getgroupcollection-page"><p>Ignore any cached value.</p>
+</div></td></tr></tbody></table><h5 id="methods_getgroupcollection_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string[]</a></td><td><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getgroupcollection-page"><p>Promise which resolves with the array of groups the user belongs to.</p>
+</div></td></tr></table></div>
+</li>
 <li><h3 id="methods_getuserprofile">getUserProfile(force)</h3>
 <div class="getuserprofile"><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getuserprofile-page"><p>Returns the user profile for the current user and caches results.
 Pull user profile info and parse into a profile object
 <a href="http://spservices.codeplex.com/wikipage?title=GetUserProfileByName">http://spservices.codeplex.com/wikipage?title=GetUserProfileByName</a></p>
 </div><h5 id="methods_getuserprofile_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>force</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getuserprofile-page"><p>Ignore any cached value.</p>
 </div></td></tr></tbody></table><h5 id="methods_getuserprofile_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getuserprofile-page"><p>Promise which resolves with the requested user profile.</p>
-</div></td></tr></table></div>
-</li>
-<li><h3 id="methods_getuserprofile">getUserProfile(force)</h3>
-<div class="getuserprofile"><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getuserprofile-page"><p>Returns the group names for the current user and caches results.</p>
-</div><h5 id="methods_getuserprofile_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>force</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getuserprofile-page"><p>Ignore any cached value.</p>
-</div></td></tr></tbody></table><h5 id="methods_getuserprofile_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string[]</a></td><td><div class="angularpoint-apusermodel-page angularpoint-apusermodel-getuserprofile-page"><p>Promise which resolves with the array of groups the user belongs to.</p>
 </div></td></tr></table></div>
 </li>
 </ul>
